[package]
name = "svix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.7"
rusqlite = { version = "^0.30", features = ["bundled"] }
anyhow = "^1"
chrono = "^0.4"
reqwest = { version = "^0.11", features = ["blocking"] }
rand = "^0.8"
tokio = { version = "^1.35", features = ["full"] }

[dev-dependencies]
tempfile = "^3.9"
